# C4dynamics

./: .gitattributes  .gitignore  CHANGELOG.md  CNAME  LICENSE  README.md  __init__.py  arrays.py  c4dynamics_env.yaml  c4dynamics_setup.ipynb  carbon-config.json  changelist.txt  cnvrt.py  conda_installation.MD  contributing.md  fit_curve.py  general.py  genindex.html  git-readme.txt  importc4d.py  introduction_guide.ipynb  make.bat  params.py  polynomial_fit.py  pyproject.toml  requirements-dev.txt  requirements.txt  rotmat.py  searchindex.js  setup.py  setup_guide.ipynb  todo.txt
_sources/: body.rigidbody.rst.txt
body/: datapoint.py  eqm6.py  rigidbody.py  sixdof.py
c4dynamics/: __init__.py
detectors/: __init__.py  yolo_opencv.py  yolo_tf.py
dev/: index.html
doc/: detect_track.pptx  help.txt
docs/: .buildinfo  Science.lnk  bodies.html  body.datapoint.html  body.rigidbody.html  genindex.html  gettingstarted.html  index.html  installation.html  objects.inv  posts.lnk  py-modindex.html  quickstart.html  search.html  searchindex.js
doctrees/: bodies.doctree  body.rigidbody.doctree  environment.pickle  index.doctree
eqm/: eqm3.py  eqm6.py
examples/: README.md  _aerodynamics.py  _engine.py  _m_target.py  aerodynamics.py  animate.py  animate_surface.py  autopilot.py  cars_tracker.ipynb  cars_tracker_v2.ipynb  cars_tracker_v3.ipynb  control_system.py  datasets.py  detect_track.ipynb  docs_examples.ipynb  dof6sim.ipynb  dof6sim.py  dof6sim_aviva.py  double_pendulum.ipynb  engine.py  freefall.ipynb  freefall.py  kalman_radar.ipynb  los_seeker.ipynb  m_target.py  (+11 more)
(+654 files in other folders)
