[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "c4dynamics"
version = "2.3.1"
description = "Python framework for state-space modeling and algorithm development"
authors = [
    {name = "Ziv Meri", email="zivmeri@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8, <3.13"
license = {text="MIT"}

dependencies = [
  "imageio>=2.37.0", 
  "matplotlib>=3.10.3", 
  "natsort>=8.4.0", 
  "numpy>=2.3.1", 
  "opencv-python>=4.11.0.86",
  "pooch>=1.8.2",
  "scipy>=1.16.0"
]

# Optional / development dependencies
[project.optional-dependencies]
dev = [
    "nbsphinx>=0.9.7",
    "Sphinx>=8.1.3",
    "sphinx-book-theme>=1.1.4",
    "sphinx_design>=0.6.1"
]


